feat: update to Composer 2. Install Laravel Vapor CLI

--- a/7.4/Dockerfile
+++ b/7.4/Dockerfile
@@ -28,5 +28,8 @@ RUN set -ex \
     && docker-php-ext-enable sqlsrv pdo_sqlsrv  \
     && docker-php-source delete \
     && apt-get purge -y --auto-remove
+    && composer self-update --2
+    && composer global remove hirak/prestissimo
+    && composer global require laravel/vapor-cli
 
 USER $IMAGE_USER
