fix: php80 build

--- a/7.4/Dockerfile
+++ b/7.4/Dockerfile
@@ -3,6 +3,14 @@ FROM edbizarro/gitlab-ci-pipeline-php:7.4
 USER root
 
 RUN set -ex \
+    && docker-php-source extract \
+    && { \
+        echo '# https://github.com/docker-library/php/issues/103#issuecomment-271413933'; \
+        echo 'AC_DEFUN([PHP_ALWAYS_SHARED],[])dnl'; \
+        echo; \
+        cat /usr/src/php/ext/odbc/config.m4; \
+    } > temp.m4 \
+    && mv temp.m4 /usr/src/php/ext/odbc/config.m4 \
     && curl -L https://packages.microsoft.com/keys/microsoft.asc | apt-key add - \
     && curl -L https://packages.microsoft.com/config/debian/10/prod.list -o /etc/apt/sources.list.d/mssql-release.list \
     && apt-get update \
